Add lightning trainer

--- a/dataviz2.ipynb
+++ b/dataviz2.ipynb
@@ -50,7 +50,7 @@
     "    plt.figure(figsize=(10, 10))\n",
     "    for slidx in range(f.shape[1]):\n",
     "        plt.subplot(8, 8, slidx + 1)\n",
-    "        plt.imshow(f[1, slidx, :, :], cmap=\"seismic\")\n",
+    "        plt.imshow(f[1, slidx, :, :], cmap=\"seismic\")/home2/vishva.saravanan/projects/ViT-fMRI/lightning.ipynb\n",
     "        plt.axis(\"off\")\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
